[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/yuyuko.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]
[ext_resource path="res://sfx/get_hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 17.0294

[sub_resource type="Animation" id=3]
resource_name = "invincible"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 7 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.2, 0.2 )
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 360
smoothing_enabled = true

[node name="HPcount" type="Label" parent="."]
margin_left = -26.0
margin_top = -32.0
margin_right = -4.0
margin_bottom = -14.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.470588, 0.415686, 0.901961, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "H"

[node name="Suikacount" type="Label" parent="."]
margin_left = -26.0
margin_top = -17.0
margin_right = -4.0
margin_bottom = 0.999998
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.901961, 0.690196, 0.415686, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "H"

[node name="InvTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="HPRegen" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SuikaRegen" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="MeleeCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource( 2 )

[node name="Listener2D" type="Listener2D" parent="."]
current = true

[node name="AudioHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invincible = SubResource( 3 )

[connection signal="timeout" from="InvTimer" to="." method="_on_InvTimer_timeout"]
[connection signal="timeout" from="HPRegen" to="." method="_on_HPRegen_timeout"]
[connection signal="timeout" from="SuikaRegen" to="." method="_on_SuikaRegen_timeout"]
[connection signal="timeout" from="MeleeCooldown" to="." method="_on_MeleeCooldown_timeout"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
